2013-12-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/API.java: fixed the offset
	parameter for the api.

2013-12-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java,
	src/pandroid_event_viewer/pandorafms/Main.java: fixed java
	warnings.
	
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java:
	fixed the hack for old pandoras.

2013-12-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/About.java: removed the
	unused import.
	
	* src/pandroid_event_viewer/pandorafms/EventList.java,
	res/values-ja/strings.xml, res/values/strings.xml,
	res/values-es/strings.xml: fixed the text to show when the
	event is a recon.
	
	* AndroidManifest.xml: incremented the version.

2013-11-25  Ramon Novoa  <rnovoa@artica.es>

	* res/values/strings.xml,
	  res/values-es/strings.xml: Updated some strings.

2013-11-25  Miguel de Dios  <miguel.dedios@artica.es>
	
	* AndroidManifest.xml,
	src/pandroid_event_viewer/pandorafms/Options.java: updated lost
	changes.

2013-11-11  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/About.java,
	res/values-es/strings.xml, res/layout/info.xml,
	res/values-ja/strings.xml, res/values/strings.xml: added ok button
	in the about view.

2013-11-11  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java: changed the
	style to show a better face the list of events.

2013-11-08  Sergio Martin <sergio.martin@artica.es>

	* src/pandroid_event_viewer/pandorafms/EventList.java: Adapt
	the event comments to new storing format

	* res/layout/item_list_event_extended.xml: Improve event 
	comments layout to wrap the text to the container

2013-11-07  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java,
	src/pandroid_event_viewer/pandorafms/PopupValidationEvent.java:
	fixed the validation event.
